fix(02): revise 02-02 dependency to require 02-01 completion

--- a/.planning/phases/02-project-bootstrap/02-02-PLAN.md
+++ b/.planning/phases/02-project-bootstrap/02-02-PLAN.md
@@ -2,8 +2,8 @@
 phase: 02-project-bootstrap
 plan: 02
 type: execute
-wave: 1
-depends_on: []
+wave: 2
+depends_on: ["01"]
 files_modified:
   - skills/ac-reset/SKILL.md
 autonomous: true
@@ -49,6 +49,7 @@ Output: skills/ac-reset/SKILL.md (teardown instructions)
 @.planning/ROADMAP.md
 @.planning/STATE.md
 @.planning/phases/02-project-bootstrap/02-RESEARCH.md
+@.planning/phases/02-project-bootstrap/02-01-SUMMARY.md
 @scripts/lib/markers.sh
 </context>
 
@@ -126,7 +127,7 @@ Keep this skill concise. It's a simple teardown operation -- no need for elabora
   <name>Task 2: Validate plugin skills registration and structure</name>
   <files>skills/ac-init/SKILL.md, skills/ac-reset/SKILL.md, skills/ac-init/scripts/discover-commands.sh</files>
   <action>
-Validate that both skills are properly structured for the Claude Code plugin system. This task verifies the integration between Phase 2 skills and the Phase 1 plugin scaffold.
+Validate that both skills are properly structured for the Claude Code plugin system. This task verifies the integration between Phase 2 skills and the Phase 1 plugin scaffold. **Note: This task depends on Plan 02-01 having already created skills/ac-init/SKILL.md and skills/ac-init/scripts/discover-commands.sh.**
 
 1. **Verify directory structure matches plugin spec:**
    ```
