fix(05): revise plans based on checker feedback

--- a/.planning/phases/05-pattern-extraction/05-02-PLAN.md
+++ b/.planning/phases/05-pattern-extraction/05-02-PLAN.md
@@ -15,7 +15,7 @@ requirements:
 must_haves:
   truths:
     - "Stop hook with type agent is registered in hooks.json"
-    - "Agent hook prompt references extract-patterns.md instructions and includes $ARGUMENTS"
+    - "Agent hook prompt references extract-patterns.md via ${CLAUDE_PLUGIN_ROOT} path with fallback resolution and inline minimal instructions for cwd-vs-plugin-root mismatch, and includes $ARGUMENTS"
     - "Agent hook has timeout of 120 seconds and a statusMessage"
     - "cleanup-session.sh archives session log to .prev before truncating"
     - "hooks.json remains valid JSON with all existing hooks preserved"
@@ -29,7 +29,7 @@ must_haves:
   key_links:
     - from: "hooks/hooks.json"
       to: "agents/extract-patterns.md"
-      via: "Stop agent hook prompt instruction"
+      via: "Stop agent hook prompt uses ${CLAUDE_PLUGIN_ROOT}/agents/extract-patterns.md with fallback path resolution"
       pattern: "extract-patterns"
     - from: "scripts/cleanup-session.sh"
       to: ".auto-context/session-log.jsonl.prev"
@@ -71,6 +71,16 @@ Use the simpler single-agent-hook approach (per research recommendation for v1).
 2. Read the full instructions from the agents/extract-patterns.md file
 3. Follow those instructions to analyze the session
 
+**Path resolution strategy for agents/extract-patterns.md (addressing cwd-vs-plugin-root mismatch):**
+
+The `agents/extract-patterns.md` file lives inside the auto-context plugin directory, NOT in the user's project directory. The `cwd` from hook input points to the user's project (e.g., `/Users/alice/my-app`). The existing command hooks in hooks.json all use `${CLAUDE_PLUGIN_ROOT}` for path resolution (see SessionStart, PostToolUse, etc.), but for agent hooks the prompt is sent to the LLM -- not executed as a shell command -- so `${CLAUDE_PLUGIN_ROOT}` may not expand.
+
+**Approach: Use `${CLAUDE_PLUGIN_ROOT}` with inline fallback.**
+
+1. The prompt uses `${CLAUDE_PLUGIN_ROOT}/agents/extract-patterns.md` as the primary path. If Claude Code expands env vars in agent hook prompts (as it does for command hooks), this resolves correctly.
+2. The prompt includes a fallback instruction: if the Read tool fails on that path, the agent should attempt to locate the plugin by searching for the auto-context hooks.json file in common locations (`node_modules/.hooks/auto-context/`, `.claude/plugins/auto-context/`, or by reading `.claude/settings.json` to find the plugin root).
+3. As a last resort, the prompt includes enough inline context (the essential pre-check, classification categories, and output format) so the agent can perform basic extraction even without the full instructions file.
+
 Hook entry to add:
 
 ```json
@@ -79,7 +89,7 @@ Hook entry to add:
     "hooks": [
       {
         "type": "agent",
-        "prompt": "You are the auto-context pattern extraction agent. First, parse the hook input below. If stop_hook_active is true, respond immediately with {\"ok\": true} and do nothing else. Otherwise, use the Read tool to load the instructions file at agents/extract-patterns.md in the project working directory, then follow those instructions completely.\n\nHook input: $ARGUMENTS",
+        "prompt": "You are the auto-context pattern extraction agent.\n\nFirst, parse the hook input below. If stop_hook_active is true, respond immediately with {\"ok\": true} and do nothing else.\n\nOtherwise, use the Read tool to load the full instructions file at: ${CLAUDE_PLUGIN_ROOT}/agents/extract-patterns.md\n\nIf that path fails (file not found), try these fallback paths to locate the plugin root:\n1. Read .claude/settings.json in the project cwd and look for the auto-context plugin path\n2. Search for agents/extract-patterns.md in common plugin locations\n\nIf you cannot find the instructions file at all, perform minimal extraction: read .auto-context/session-log.jsonl in the project cwd, identify intentional coding patterns (consistent across 2+ files, not framework-imposed), and write them to .auto-context/candidates.json with classification=intentional, confidence=0.3, source=extraction, and at least 2 evidence citations per pattern. Always respond with {\"ok\": true}.\n\nHook input: $ARGUMENTS",
         "timeout": 120,
         "statusMessage": "Auto-Context: analyzing session for patterns..."
       }
@@ -91,7 +101,7 @@ Hook entry to add:
 **Critical constraints:**
 - Preserve ALL existing hook entries (SessionStart, UserPromptSubmit, PostToolUse, PostToolUseFailure, SessionEnd)
 - The prompt uses `$ARGUMENTS` placeholder (expanded by Claude Code at runtime with the Stop event JSON)
-- The prompt does NOT use `${CLAUDE_PLUGIN_ROOT}` because environment variable expansion may not work in agent hook prompts (per research open question #4). Instead, the agent reads the file relative to cwd.
+- The prompt uses `${CLAUDE_PLUGIN_ROOT}` for the primary path (consistent with how all other hooks reference plugin files). Whether this expands in agent hook prompts is uncertain (research open question #4), so the prompt includes fallback resolution and inline minimal instructions.
 - Timeout: 120 seconds (research recommendation -- gives agent time for multi-file Read/Grep operations)
 - statusMessage provides user feedback during extraction
 
@@ -99,9 +109,9 @@ Validate the resulting hooks.json is valid JSON with `jq .`.
   </action>
   <verify>
     <automated>jq '.hooks.Stop[0].hooks[0].type' hooks/hooks.json | grep -q 'agent' && jq '.hooks.Stop[0].hooks[0].timeout' hooks/hooks.json | grep -q '120' && jq '.hooks | keys | length' hooks/hooks.json | grep -q '6' && echo "PASS"</automated>
-    <manual>Verify hooks.json has 6 event types: SessionStart, UserPromptSubmit, PostToolUse, PostToolUseFailure, Stop, SessionEnd. Stop entry has type=agent, timeout=120, statusMessage present, prompt includes $ARGUMENTS.</manual>
+    <manual>Verify hooks.json has 6 event types: SessionStart, UserPromptSubmit, PostToolUse, PostToolUseFailure, Stop, SessionEnd. Stop entry has type=agent, timeout=120, statusMessage present, prompt includes $ARGUMENTS. Prompt uses ${CLAUDE_PLUGIN_ROOT}/agents/extract-patterns.md as primary path, includes fallback path resolution instructions, and has inline minimal extraction instructions as last resort.</manual>
   </verify>
-  <done>hooks.json contains a Stop agent hook entry with type=agent, timeout=120, statusMessage, and a concise prompt that references extract-patterns.md via Read tool. All 5 existing hooks preserved. File is valid JSON.</done>
+  <done>hooks.json contains a Stop agent hook entry with type=agent, timeout=120, statusMessage, and a prompt that references extract-patterns.md via Read tool using ${CLAUDE_PLUGIN_ROOT} as primary path. Prompt includes fallback path resolution and inline minimal extraction instructions for the case where the instructions file cannot be found (cwd-vs-plugin-root mismatch handled). All 5 existing hooks preserved. File is valid JSON.</done>
 </task>
 
 <task type="auto">
