fix(06): revise plans based on checker feedback

--- a/.planning/phases/06-convention-lifecycle-review/06-03-PLAN.md
+++ b/.planning/phases/06-convention-lifecycle-review/06-03-PLAN.md
@@ -8,6 +8,7 @@ depends_on:
 files_modified:
   - scripts/preserve-context.sh
   - hooks/hooks.json
+  - scripts/inject-context.sh
 autonomous: true
 requirements:
   - PRSC-01
@@ -28,6 +29,9 @@ must_haves:
     - path: "hooks/hooks.json"
       provides: "PreCompact hook registration"
       contains: "PreCompact"
+    - path: "scripts/inject-context.sh"
+      provides: "PreCompact backup restore logic"
+      contains: "BACKUP_DIR"
   key_links:
     - from: "hooks/hooks.json"
       to: "scripts/preserve-context.sh"
@@ -37,6 +41,10 @@ must_haves:
       to: ".auto-context/backup/"
       via: "cp of critical JSON files"
       pattern: "backup"
+    - from: "scripts/inject-context.sh"
+      to: ".auto-context/backup/"
+      via: "restore check on SessionStart"
+      pattern: "BACKUP_DIR"
 ---
 
 <objective>
@@ -161,7 +169,7 @@ The restore logic:
 **Place this restore block BEFORE lifecycle initialization** so that restored lifecycle.json is available for the lifecycle pipeline.
   </action>
   <verify>
-    <automated>bash -n scripts/preserve-context.sh && test -x scripts/preserve-context.sh 2>/dev/null; jq '.hooks.PreCompact[0].hooks[0].type' hooks/hooks.json 2>/dev/null | grep -q 'command' && jq '.hooks | keys | length' hooks/hooks.json | grep -q '7' && grep -q "backup" scripts/inject-context.sh && echo "PASS"</automated>
+    <automated>bash -n scripts/preserve-context.sh && test -x scripts/preserve-context.sh 2>/dev/null && jq '.hooks.PreCompact[0].hooks[0].type' hooks/hooks.json 2>/dev/null | grep -q 'command' && jq '.hooks | keys | length' hooks/hooks.json | grep -q '7' && grep -q "backup" scripts/inject-context.sh && echo "PASS"</automated>
     <manual>Verify: preserve-context.sh backs up 4 JSON files to backup/ directory. hooks.json has 7 event types (SessionStart, UserPromptSubmit, PostToolUse, PostToolUseFailure, Stop, PreCompact, SessionEnd). PreCompact entry uses type:command. inject-context.sh has restore logic that checks backup dir, validates primary files with jq empty, restores if needed, cleans up backup dir.</manual>
   </verify>
   <done>preserve-context.sh creates backup of 4 critical JSON files during PreCompact. hooks.json registers PreCompact command hook. inject-context.sh includes restore logic that recovers from backup if primary files are empty/corrupted, then cleans up the backup directory. All files pass syntax validation.</done>
