fix(06): revise plans based on checker feedback

--- a/.planning/phases/06-convention-lifecycle-review/06-03-PLAN.md
+++ b/.planning/phases/06-convention-lifecycle-review/06-03-PLAN.md
@@ -73,7 +73,7 @@ Output: New preserve-context.sh script, updated hooks.json with PreCompact entry
 
 <task type="auto">
   <name>Task 1: Create PreCompact backup script and register hook</name>
-  <files>scripts/preserve-context.sh, hooks/hooks.json</files>
+  <files>scripts/preserve-context.sh, hooks/hooks.json, scripts/inject-context.sh</files>
   <action>
 **1. Create `scripts/preserve-context.sh`:**
 
